tests/expectations/parser/functions/ident_token_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found '1'
    --> test:4:5
     |
   4 |     1 main() {}}
     |     ^"""]
